Make HTML asset and nav paths relative for GitHub Pages subpath

--- a/components/footer.html
+++ b/components/footer.html
@@ -3,21 +3,21 @@
 <footer class="site-footer">
   <div class="wrap footer-grid">
     <div class="brand-col">
-      <img src="/logo/zoon-logo.svg" alt="ZOON CORP" height="32">
+      <img src="logo/zoon-logo.svg" alt="ZOON CORP" height="32">
       <p>Connecting global agriculture with enterprise technology. Supply, systems, scale.</p>
     </div>
     <div class="links-col">
       <h4>Company</h4>
-      <a href="/">Home</a>
-      <a href="/about.html">About</a>
-      <a href="/services.html">Services</a>
-      <a href="/contact.html">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
     </div>
     <div class="links-col">
       <h4>Legal</h4>
-      <a href="/privacy-policy.html">Privacy Policy</a>
-      <a href="/terms.html">Terms of Service</a>
-      <a href="/sitemap.xml">Sitemap</a>
+      <a href="privacy-policy.html">Privacy Policy</a>
+      <a href="terms.html">Terms of Service</a>
+      <a href="sitemap.xml">Sitemap</a>
     </div>
     <div class="contact-col">
       <h4>Connect</h4>
